First verion of Overall CI Arch

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-kfp
-pandas
+kfp~=1.8.19
+pandas~=1.5.3
 scikit-learn
-minio
+minio~=7.1.13
 numpy
-feast
+feast~=0.29.0
 matplotlib
 seaborn
 xgboost
 category-encoders
 SQLAlchemy==2.0.5.post1
-alembic
+alembic~=1.10.2
+isoduration~=20.11.0
+keras
+tensorflow
+joblib
+protobuf==3.20.1
