Create Docker image for Pipelines

--- a/pipelines/ml_pipeline_components/Dockerfile
+++ b/pipelines/ml_pipeline_components/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9-slim-buster
 
 WORKDIR /app/ml_pipeline_components
 
-RUN sudo apt install python3-pip -y
+#RUN apt install python3-pip -y
 RUN pip3 install kfp --upgrade --user
 RUN echo 'export PATH=$PATH:~/.local/bin' | tee -a ~/.bashrc
 
