--- a/.github/workflows/run_data_preprocessing.yaml
+++ b/.github/workflows/run_data_preprocessing.yaml
@@ -20,17 +20,8 @@ jobs:
           username: 'ubuntu'
           server: ${{ vars.AWS_EC2_CONTROL_PLANE_IP }}
           ssh_private_key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          local_path: './pipelines/*'
-          remote_path: '/home/ubuntu/pipelines'
-          sftpArgs: '-o ConnectTimeout=5'
-      - name: deploy file to server
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
-        with:
-          username: 'ubuntu'
-          server: ${{ vars.AWS_EC2_CONTROL_PLANE_IP }}
-          ssh_private_key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
-          local_path: './titanic_feature/*'
-          remote_path: '/home/ubuntu/titanic_feature'
+          local_path: './deployments/*'
+          remote_path: '/home/ubuntu/deployments'
           sftpArgs: '-o ConnectTimeout=5'
       - name: run Pipeline
         uses: appleboy/ssh-action@master
@@ -39,7 +30,4 @@ jobs:
           username: ${{ vars.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
           script: |
-            python3 ~/data_preprocessing_train.py
-            python3 ~/parquet_loader.py
-            feast apply
-            python3 ~/build_train_data.py
+            kubectl apply -f deployments/pipelines/data_processing_train.yaml
