--- a/.github/workflows/run_data_preprocessing.yaml
+++ b/.github/workflows/run_data_preprocessing.yaml
@@ -2,6 +2,10 @@ name: Build Data Preprocessing Pipeline
 
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: [Build Data Preprocessing Pipeline]
+    types:
+      - completed
 
 jobs:
   build:
