troubleshooting docker image

--- a/.github/workflows/run_data_preprocessing.yaml
+++ b/.github/workflows/run_data_preprocessing.yaml
@@ -3,7 +3,7 @@ name: Build Data Preprocessing Pipeline
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [Build Data Preprocessing Pipeline]
+    workflows: [Build Pipelines components]
     types:
       - completed
 
