troubleshooting docker image

--- a/pipelines/ml_pipeline_components/Dockerfile
+++ b/pipelines/ml_pipeline_components/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /app/ml_pipeline_components
 RUN pip3 install kfp --upgrade --user
 RUN echo 'export PATH=$PATH:~/.local/bin' | tee -a ~/.bashrc
 
-COPY . .
+COPY ./pipelines/ml_pipeline_components .
+
+RUN ls /app/ml_pipeline_components
