--- a/pipelines/data_preprocessing_train/Dockerfile
+++ b/pipelines/data_preprocessing_train/Dockerfile
@@ -2,10 +2,8 @@ FROM majinetudacitylearn/module_ml_pipeline_components:v0.0.1
 
 WORKDIR /app/data_preprocessing_train
 
-COPY . .
+COPY ./pipelines/data_preprocessing_train .
 
-RUN ls /
-RUN ls /app
 RUN ls /app/data_preprocessing_train
 
-#CMD [ "python3", "data_preprocessing_train.py"]
+CMD [ "python3", "data_preprocessing_train.py"]
