--- a/pipelines/Dockerfile-data_preprocessing_train
+++ b/pipelines/Dockerfile-data_preprocessing_train
@@ -8,7 +8,7 @@ RUN echo 'export PATH=$PATH:~/.local/bin' | tee -a ~/.bashrc
 COPY ./pipelines/ml_pipeline_components ml_pipeline_components
 COPY ./pipelines/data_preprocessing_train.py .
 
-RUN ls /app
-RUN ls /app/ml_pipeline_components
+RUN ls /app/pipelines
+RUN ls /app/pipelines/ml_pipeline_components
 
 CMD [ "python3", "data_preprocessing_train.py"]
