troubleshooting pipline steps - add volume mount

--- a/deployments/pipelines/data_processing_train.yaml
+++ b/deployments/pipelines/data_processing_train.yaml
@@ -24,4 +24,4 @@ spec:
         imagePullPolicy: Always
         volumeMounts:
           - name: pvc
-            mountPath: /
+            mountPath: /app
