--- a/pipelines/Dockerfile-data_preprocessing_train
+++ b/pipelines/Dockerfile-data_preprocessing_train
@@ -1,14 +1,11 @@
 FROM python:3.9-slim-buster
 
-WORKDIR /app/pipelines
+WORKDIR pipelines
 
 RUN pip3 install kfp --upgrade --user
 RUN echo 'export PATH=$PATH:~/.local/bin' | tee -a ~/.bashrc
 
 COPY ./pipelines/ml_pipeline_components ml_pipeline_components
 COPY ./pipelines/data_preprocessing_train.py .
-
-RUN ls /app/pipelines
-RUN ls /app/pipelines/ml_pipeline_components
 
 CMD [ "python3", "data_preprocessing_train.py"]
