--- a/deployments/pipelines/data_processing_train.yaml
+++ b/deployments/pipelines/data_processing_train.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: pipeline-data-process
     spec:
+      restartPolicy: Never
       volumes:
         - name: pvc
           persistentVolumeClaim:
