--- a/pipelines/Dockerfile-data_preprocessing_train
+++ b/pipelines/Dockerfile-data_preprocessing_train
@@ -2,7 +2,7 @@ FROM python:3.9-slim-buster
 
 WORKDIR pipelines
 
-RUN pip3 install kfp==2.0.0b13 --upgrade --user
+RUN pip3 install kfp --upgrade --user
 RUN echo 'export PATH=$PATH:~/.local/bin' | tee -a ~/.bashrc
 
 COPY ./pipelines/ml_pipeline_components ml_pipeline_components
