--- a/jobs/pipelines/data_processing_train.yaml
+++ b/jobs/pipelines/data_processing_train.yaml
@@ -1,9 +1,7 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: data-process-train-deployment
-  labels:
-    app: pipeline-data-process
 spec:
   replicas: 1
   selector:
@@ -14,14 +12,18 @@ spec:
       labels:
         app: pipeline-data-process
     spec:
+      parallelism: 1
+      ttlSecondsAfterFinished: 300
       volumes:
-        - name: pvc
-          persistentVolumeClaim:
-            claimName: pvc-kubeflow-pipe-app
+      - name: pvc
+        persistentVolumeClaim:
+          claimName: pvc-kubeflow-pipe-app
       containers:
       - name: data-process-train
         image: majinetudacitylearn/pipeline_data_preprocessing_train:v0.0.1
         imagePullPolicy: Always
         volumeMounts:
-          - name: pvc
-            mountPath: /app
+        - name: pvc
+          mountPath: /app
+      restartPolicy: Never
+  backoffLimit: 3
