--- a/.github/workflows/build_pipelines.yaml
+++ b/.github/workflows/build_pipelines.yaml
@@ -23,6 +23,13 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Build and push (file_uploader)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: pipelines/Dockerfile-file_uploader
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/file_uploader:v0.0.1
       - name: Build and push (data_preprocessing_train)
         uses: docker/build-push-action@v4
         with:
@@ -30,3 +37,17 @@ jobs:
           file: pipelines/Dockerfile-data_preprocessing_train
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pipeline_data_preprocessing_train:v0.0.1
+      - name: Build and push (feast apply)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: titanic_feature/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/feast_apply:v0.0.1
+      - name: Build and push (build_train_data)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: pipelines/Dockerfile-build_train_data
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pipeline_build_train_data:v0.0.1
