--- a/titanic_feature/feature_repo/feature_store.yaml
+++ b/titanic_feature/feature_repo/feature_store.yaml
@@ -3,7 +3,7 @@ provider: local
 registry:
     registry_store_type: PostgreSQLRegistryStore
     path: feast_registry
-    host: 10.152.183.19
+    host: postgresql.default.svc.cluster.local
     port: 5432
     database: feast
     db_schema: public
@@ -11,7 +11,7 @@ registry:
     password: feast
 online_store:
     type: postgres
-    host: 10.152.183.19
+    host: postgresql.default.svc.cluster.local
     port: 5432
     database: feast
     db_schema: public
@@ -19,7 +19,7 @@ online_store:
     password: feast
 offline_store:
     type: postgres
-    host: 10.152.183.19
+    host: postgresql.default.svc.cluster.local
     port: 5432
     database: feast
     db_schema: public
