--- a/jobs/pipelines/data_processing_train.yaml
+++ b/jobs/pipelines/data_processing_train.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: Job-data-process-train
+  name: job-data-process-train
 spec:
   parallelism: 1
   ttlSecondsAfterFinished: 300
@@ -19,7 +19,7 @@ spec:
           claimName: pvc-kubeflow-pipe-data
       containers:
       - name: file-uploader
-        image: majinetudacitylearn/file-uploader:v0.0.1
+        image: majinetudacitylearn/file_uploader:v0.0.1
         imagePullPolicy: Always
         volumeMounts:
         - name: pvc-data
@@ -31,7 +31,7 @@ spec:
         - name: pvc-app
           mountPath: /app
       - name: feast-apply
-        image: majinetudacitylearn/feast-apply:v0.0.1
+        image: majinetudacitylearn/feast_apply:v0.0.1
         imagePullPolicy: Always
         volumeMounts:
           - name: pvc-data
