--- a/titanic_feature/Dockerfile
+++ b/titanic_feature/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim-buster
 WORKDIR titanic_feature
 
 RUN pip3 install feast --upgrade --user
-RUN pip3 install psycopg2 --upgrade --user
+RUN pip3 install psycopg2-binary --upgrade --user
 
 COPY ./titanic_feature .
 
