--- a/.github/workflows/run_data_preprocessing.yaml
+++ b/.github/workflows/run_data_preprocessing.yaml
@@ -34,4 +34,18 @@ jobs:
           username: ${{ vars.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
           script: |
+            kubectl apply -f jobs/pipelines/file_uploader.yaml         
+            sleep 60
+            kubectl wait --for=jsonpath='{.status.phase}'=Completed --timeout=2400s job/job-file-uploader
+            
             kubectl apply -f jobs/pipelines/data_processing_train.yaml
+            sleep 60
+            kubectl wait --for=jsonpath='{.status.phase}'=Completed --timeout=2400s job/job-data-process-train            
+            until kubectl get pods --all -n admin -o jsonpath='{.status.conditions[?(@.type=="Complete")].status}' | grep True ; do sleep 60; done
+            
+            kubectl apply -f jobs/pipelines/feast_apply.yaml
+            sleep 60
+            kubectl wait --for=jsonpath='{.status.phase}'=Completed --timeout=2400s job/job-feast-apply
+            until kubectl get pods --all -n admin -o jsonpath='{.status.conditions[?(@.type=="Complete")].status}' | grep True ; do sleep 60; done
+            
+            kubectl apply -f jobs/pipelines/build_train_data.yaml
