--- a/titanic_feature/Dockerfile
+++ b/titanic_feature/Dockerfile
@@ -1,11 +1,10 @@
-FROM python:3.9-slim-buster
+#FROM python:3.9-slim-buster
+FROM alpine:latest
 
 WORKDIR titanic_feature
 
-RUN pip3 install minio --upgrade --user
-RUN pip3 install feast --upgrade --user
-RUN pip3 install psycopg2-binary --upgrade --user
-RUN pip3 install isoduration --upgrade --user
+RUN apk add --update python3=~3.9 py3-pip
+RUN pip3 install minio feast psycopg2-binary isoduration--upgrade --user
 
 COPY ./titanic_feature .
 
