--- a/titanic_feature/Dockerfile
+++ b/titanic_feature/Dockerfile
@@ -1,9 +1,8 @@
 #FROM python:3.9-slim-buster
-FROM alpine:latest
+FROM python:3.9-alpine
 
 WORKDIR titanic_feature
 
-RUN apk add --update python3=~3.9 py3-pip
 RUN pip3 install minio feast psycopg2-binary isoduration--upgrade --user
 
 COPY ./titanic_feature .
