--- a/titanic_feature/feature_repo/feature_store.yaml
+++ b/titanic_feature/feature_repo/feature_store.yaml
@@ -10,13 +10,9 @@ registry:
     user: feast
     password: feast
 online_store:
-    type: postgres
-    host: postgresql.default.svc.cluster.local
-    port: 5432
-    database: feast
-    db_schema: public
-    user: feast
-    password: feast
+    type: redis
+    redis_type: redis_cluster
+    connection_string: "redis-master.default.svc.cluster.local:6379,ssl=false,password=bvedFOdDcY"
 offline_store:
     type: postgres
     host: postgresql.default.svc.cluster.local
