create titanic model image

--- a/model/Dockerfile-titanic-model
+++ b/model/Dockerfile-titanic-model
@@ -1,5 +1,5 @@
 FROM tensorflow/tensorflow:2.11.1
 RUN pip3 install pandas scikit-learn keras #tensorflow_datasets
 WORKDIR titanic
-COPY ./titanic/titanic_model.py .
+COPY ./model/titanic_model.py .
 ENTRYPOINT ["python3", "titanic_model.py", "--batch_size", "64", "--learning_rate", "0,1", "--optimizer", "adam"]
