--- a/jobs/models/titanic_model.yaml
+++ b/jobs/models/titanic_model.yaml
@@ -23,8 +23,8 @@ spec:
         command:
           - "python3"
           - "titanic_model.py"
-          - "--minio-access-key=${MINIO_ACCESS_KEY_ID}"
-          - "--minio-secret-key=${MINIO_SECRET_ACCESS_KEY}"
+          - "--minio-access-key=$(MINIO_ACCESS_KEY_ID)"
+          - "--minio-secret-key=$(MINIO_SECRET_ACCESS_KEY)"
         env:
         - name: MINIO_ACCESS_KEY_ID
           valueFrom:
