--- a/jobs/pipelines/data_processing_train.yaml
+++ b/jobs/pipelines/data_processing_train.yaml
@@ -23,8 +23,8 @@ spec:
         command:
           - "python3"
           - "data_preprocessing_train.py"
-          - "--minio-access-key=${MINIO_ACCESS_KEY_ID}"
-          - "--minio-secret-key=${MINIO_SECRET_ACCESS_KEY}"
+          - "--minio-access-key=$(MINIO_ACCESS_KEY_ID)"
+          - "--minio-secret-key=$(MINIO_SECRET_ACCESS_KEY)"
         env:
         - name: MINIO_ACCESS_KEY_ID
           valueFrom:
