fix File system scheme 's3' not implemented (file: 's3://demo-bucket/model/variables')

--- a/jobs/models/titanic_model.yaml
+++ b/jobs/models/titanic_model.yaml
@@ -41,9 +41,9 @@ spec:
         - name: S3_ENDPOINT
           value: minio.kubeflow.svc.cluster.local:9000
         - name: S3_USE_HTTPS
-          value: 0
+          value: "0"
         - name: S3_VERIFY_SSL
-          value: 0
+          value: "0"
         imagePullPolicy: Always
         volumeMounts:
         - name: pvc-app
