--- a/model/Dockerfile-titanic-model
+++ b/model/Dockerfile-titanic-model
@@ -1,5 +1,5 @@
 FROM tensorflow/tensorflow:2.12.0
-RUN pip3 install pandas scikit-learn keras minio pyarrow fastparquet tensorflow_io #tensorflow_datasets
+RUN pip3 install pandas scikit-learn keras minio pyarrow fastparquet tensorflow_io boto3 #tensorflow_datasets
 WORKDIR titanic
 COPY ./model/titanic_model.py .
 ENTRYPOINT ["python3", "titanic_model.py", "--batch_size", "64", "--learning_rate", "0,1", "--optimizer", "adam"]
