--- a/.github/workflows/run_data_preprocessing.yaml
+++ b/.github/workflows/run_data_preprocessing.yaml
@@ -56,8 +56,8 @@ jobs:
           key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
           script: |
             kubectl apply -f jobs/pipelines/feast_apply.yaml
-            sleep 300
-            #kubectl wait --for=condition=complete --timeout=2400s job/job-feast-apply
+            sleep 60
+            kubectl wait --for=condition=complete --timeout=300s job/job-feast-apply
             #kubectl wait --for=jsonpath='{.status.phase}'=Succeeded --timeout=2400s pod -l "pipelines.kubeflow.org/pipeline-sdk-type=kfp" -n admin
       - name: run Pipeline (build train data)
         uses: appleboy/ssh-action@master
