--- a/jobs/pipelines/feast_apply.yaml
+++ b/jobs/pipelines/feast_apply.yaml
@@ -20,9 +20,8 @@ spec:
       containers:
       - name: feast-apply
         image: majinetudacitylearn/feast_apply:v0.0.1
-        command:
-          - "feast"
-          - "apply"
+        command: [ "feast" ]
+        args: [ "apply" ]
         imagePullPolicy: Always
         volumeMounts:
         - name: pvc-data
