--- a/jobs/pipelines/feast_apply.yaml
+++ b/jobs/pipelines/feast_apply.yaml
@@ -20,8 +20,8 @@ spec:
       containers:
       - name: feast-apply
         image: majinetudacitylearn/feast_apply:v0.0.1
-        command: [ "feast" ]
-        args: [ "apply" ]
+        command: [ "/bin/sh" ]
+        args: [ "-c", "feast apply" ]
         imagePullPolicy: Always
         volumeMounts:
         - name: pvc-data
