--- a/jobs/pipelines/feast_apply.yaml
+++ b/jobs/pipelines/feast_apply.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
       - name: feast-apply
         image: majinetudacitylearn/feast_apply:v0.0.1
-        command: [ "/bin/sh" ]
+        command: [ "/bin/bash" ]
         args: [ "-c", "feast apply" ]
         imagePullPolicy: Always
         volumeMounts:
